--- a/app/views/angular/index.html
+++ b/app/views/angular/index.html
@@ -1,5 +1,15 @@
 <div class="row">
-  <div class="col-12-xs">
-    <h1>Card Shuffler by Dan Berger</h1>
+  <div class="col-md-12">
+    <h1>Card Shuffler</h1>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-3">
+    About this project.
+  </div>
+
+  <div class="col-md-9">
+    <ui-view />
   </div>
 </div>
