--- a/app/views/angular/index.html
+++ b/app/views/angular/index.html
@@ -1,15 +1,11 @@
 <div class="row">
-  <div class="col-md-12">
-    <h1>Card Shuffler</h1>
-  </div>
-</div>
-
-<div class="row">
   <div class="col-md-3">
-    About this project.
+    <h1>Card Shuffler</h1>
+    <h3>by Dan Berger</h3>
+    <hr />
   </div>
 
-  <div class="col-md-9">
+  <div id="board-space" class="col-md-9">
     <ui-view />
   </div>
 </div>
