--- a/public/templates/lists.html
+++ b/public/templates/lists.html
@@ -1,12 +1,14 @@
 <!-- inside Bootstrap col-md-9 -->
 
-<div class="row">
-  <div class="col-md-3" ng-repeat="list in lists">
-    <div class="list" style="background-color:#{{ list.color }}">
+<div class="row" >
+  <div class="col-md-3" ng-repeat="list in lists" ng-drop="true" ng-drop-success="onDropComplete($index, $data, $event)">
+
+    <div class="list" style="background-color:#{{ list.color }}" ng-drag="true" ng-drag-data="list">
       <h3>List {{ list.name }}</h3>
-      <p>front-end position: {{ list.frontEndPosition }}</p>
+      <p>front-end position: {{ lists.indexOf(list) + 1; }}</p>
       <p>back-end position: {{ list.order_on_board }}</p>
       <hr />
     </div>
+
   </div>
 </div>
