--- a/app/assets/stylesheets/list.scss
+++ b/app/assets/stylesheets/list.scss
@@ -1,6 +1,23 @@
 .list {
   border-radius: 10px;
+  border-width: 3px;
+  border-style: solid;
   text-align: center;
-  padding-top: 5px;
   color: #FFF;
+}
+
+.list-header {
+  padding-bottom: 10px;
+}
+
+.card-repository {
+  background-color: #FFF;
+  padding-top: 5px;
+}
+
+.card {
+  border: 2px solid #FFF;
+  border-radius: 10px;
+  margin: 5px;
+  text-align: center;
 }
