displays cards' back end position

--- a/public/templates/lists.html
+++ b/public/templates/lists.html
@@ -15,7 +15,7 @@
         <div class="card" style="background-color:#{{ card.color }}" ng-repeat="card in list.cards">
           <h4>Card {{ card.name }}</h4>
           <p>front-end position: {{ list.name }}{{ list.cards.indexOf(card) + 1; }}</p>
-          <p>back-end postiion: {{ card.order_on_list }}</p>
+          <p>back-end postiion: {{ card.position }}</p>
         </div>
       </div>
     </div>
