writes README and adds link to the main page

--- a/app/views/angular/index.html
+++ b/app/views/angular/index.html
@@ -5,7 +5,7 @@
     <hr />
     <p>This is a demo app to show drag-and-drop functionality using a combination of Ruby on Rails and Angular.js.</p>
 
-    <p>The code can be <a href="#">found here on Github.</a></p>
+    <p>The code can be <a href="https://github.com/dsberger/card-shuffler">found here on Github.</a></p>
 
     <p>Each list and card displays a 'front-end position' and a 'back-end position'.</p>
 
