sorts out separate card and list drag and drop zones

--- a/public/templates/lists.html
+++ b/public/templates/lists.html
@@ -1,22 +1,37 @@
 <!-- inside Bootstrap col-md-9 -->
 
 <div class="row" >
-  <div class="col-md-3" ng-repeat="list in lists" ng-drop="true" ng-drag-data="list" ng-drop-success="onListDropComplete($index, $data)">
+  <div class="col-md-3" ng-repeat="list in lists"
+    ng-drop="true"
+    ng-drop-success="onListDropComplete($index, $data)">
 
-    <div class="list" style="border-color:#{{ list.color }}; background-color:#{{ list.color }}" ng-drag="true" ng-drag-data="list">
-      <div class="list-header">
+    <div class="list"
+      style="border-color:#{{ list.color }}; background-color:#{{ list.color }}"
+      ng-drag="true" ng-drag-data="list">
+
+      <div class="list-header" ng-drag-handle>
         <h3>List {{ list.name }}</h3>
         <p>front-end position: {{ lists.indexOf(list) + 1; }}</p>
         <p>back-end position: {{ list.order_on_board }}</p>
       </div>
 
-      <div class="card-repository" ng-drop="true" ng-drag-data="card">
-        <div class="card" style="background-color:#{{ card.color }}" ng-repeat="card in list.cards" ng-drag="true" ng-drag-data="card">
+      <div class="card-repository">
+
+        <div class="card"
+          style="background-color:#{{ card.color }}"
+          ng-repeat="card in list.cards"
+          ng-drop="true"
+          ng-drop-success="onCardDropComplete($parent.$index, $index, $data)"
+          ng-drag="true" ng-drag-data="card">
+
           <h4>Card {{ card.name }}</h4>
           <p>front-end position: {{ list.name }}{{ list.cards.indexOf(card) + 1; }}</p>
           <p>back-end position: {{ card.position }}</p>
+
         </div>
+
       </div>
+
     </div>
 
   </div>
